--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "puppeteer": "^23.11.1",
     "quick.db": "^9.1.7",
     "sharp": "^0.33.5",
+    "ssh2": "^1.16.0",
     "stegano.db": "^3.5.0",
     "toml": "^3.0.0",
     "write-file-atomic": "^5.0.1",
@@ -49,10 +50,11 @@
   },
   "devDependencies": {
     "@types/archiver": "^6.0.3",
-    "@types/ws": "^8.5.14",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.17.19",
     "@types/ping": "^0.4.4",
+    "@types/ssh2": "^1.15.4",
+    "@types/ws": "^8.5.14",
     "tslib": "^2.8.1",
     "typescript": "^5.7.3"
   }
